--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
         <div class="features grid wide">
             <div class="features_group row">
-                <div class="features_img col l-6">
+                <div class="features_img col l-6 c-12 m-12">
                     <img src="./assets/img/Illustration 2.png" alt="">
                 </div>
-                <div class="features_item col l-6">
+                <div class="features_item col l-6 c-12 m-12">
                     <div class="features_content">
                         <h3 class="features_heading">
                             We Provide Many Features You Can Use
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="plan_choose row">
-                        <div class="plan_choose-item col l-4">
+                        <div class="plan_choose-item col l-4 m-12 c-12">
                             <div class="plan_choose-cover">
                                 <img src="./assets/img/choose.png" alt="" class="plan_choose-img">
                                 <h4 class="plan_choose-heading">Free Plan</h4>
@@ -169,7 +169,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="plan_choose-item col l-4">
+                        <div class="plan_choose-item col l-4 m-12 c-12">
                             <div class="plan_choose-cover">
                                 <img src="./assets/img/choose.png" alt="" class="plan_choose-img">
                                 <h4 class="plan_choose-heading">Standard Plan</h4>
@@ -205,7 +205,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="plan_choose-item col l-4">
+                        <div class="plan_choose-item col l-4 m-12 c-12">
                             <div class="plan_choose-cover">
                                 <img src="./assets/img/choose.png" alt="" class="plan_choose-img">
                                 <h4 class="plan_choose-heading">Premium Plan</h4>
@@ -256,10 +256,10 @@
                                 See <span>LaslesVPN</span> everywhere to make it easier for you when you move locations.
                             </p>
                         </div>
-                        <div class="plan_global_map col l-12">
+                        <div class="plan_global_map col l-12 c-12 m-12">
                             <img src="./assets/img/Huge Global.png" alt="">
                         </div>
-                        <div class="plan_global_sponsor col l-12">
+                        <div class="plan_global_sponsor col l-12 c-12 m-12">
                             <img src="./assets/img/Sponsored.png" alt="">
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                     </div>
 
                     <ul class="customer_rate row">
-                        <li class="customer_block col l-4">
+                        <li class="customer_block col l-4 c-12 m-12">
                             <div class="customer_block-container">
                                 <div class="customer_block-header">
                                     <div class="customer_header-view">
@@ -299,7 +299,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="customer_block col l-4">
+                        <li class="customer_block col l-4 c-12 m-12">
                             <div class="customer_block-container">
                                 <div class="customer_block-header">
                                     <div class="customer_header-view">
@@ -320,7 +320,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="customer_block col l-4">
+                        <li class="customer_block col l-4 c-12 m-12">
                             <div class="customer_block-container">
                                 <div class="customer_block-header">
                                     <div class="customer_header-view">
@@ -355,7 +355,7 @@
         <div class="footerbg">
             <footer class="footer grid wide">
                 <div class="footer_container row">
-                    <div class="footer_contact col l-6">
+                    <div class="footer_contact col l-6 c-12 m-12">
                         <div class="footer_contact-container">
                             <div class="header_logo-item">
                                 <img src="./assets/img/logo.png" alt="logo" class="header_logo-img">
@@ -374,7 +374,7 @@
                             <span class="footer_contact-copyright">©2020 LaslesVPN</span>
                         </div>
                     </div>
-                    <div class="footer_product col l-6">
+                    <div class="footer_product col l-6 c-12 m-12">
                         <div class="footer_product-container">
                             <div class="footer_product-list">
                                 <ul class="footer_product-items">
@@ -461,7 +461,10 @@
                             name="confirm-password">
                         <span class="form-message"></span>
                     </div>
-                    <button class="form-submit">Login</button>
+                    <span href="" class="form_suggest">Do you have an account?
+                        <a href="">Sign In</a>
+                    </span>
+                        <button class="form-submit">Login</button>
                 </form>
             </div>
         </div>
