--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                         </p>
                     </div>
 
-                    <ul class="customer_rate row">
-                        <li class="customer_block col l-4 c-12 m-12">
+                    <div class="customer_rate row">
+                        <div class="customer_block col l-4 c-12 m-12">
                             <div class="customer_block-container">
                                 <div class="customer_block-header">
                                     <div class="customer_header-view">
@@ -298,8 +298,8 @@
                                         LaslesVPN always the best”.</p>
                                 </div>
                             </div>
-                        </li>
-                        <li class="customer_block col l-4 c-12 m-12">
+                        </div>
+                        <div class="customer_block col l-4 c-12 m-12">
                             <div class="customer_block-container">
                                 <div class="customer_block-header">
                                     <div class="customer_header-view">
@@ -319,8 +319,8 @@
                                         can connect with high speed.”.</p>
                                 </div>
                             </div>
-                        </li>
-                        <li class="customer_block col l-4 c-12 m-12">
+                        </div>
+                        <div class="customer_block col l-4 c-12 m-12">
                             <div class="customer_block-container">
                                 <div class="customer_block-header">
                                     <div class="customer_header-view">
@@ -340,8 +340,8 @@
                                         currently requires a virtual private network that has high security.”.</p>
                                 </div>
                             </div>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
 
                     <div class="customer_btn">
                         <i class="fa-solid fa-arrow-left"></i>
