update mobile menn u

--- a/index.html
+++ b/index.html
@@ -35,10 +35,28 @@
                         <li class="header_item">Help</li>
                     </ul>
                 </div>
-                <div class="header_btn col l-4 m-6 c-6">
+                <div class="header_btn col l-4 m-6 c-0">
                     <div class="header_group">
                         <a href="#" class="header_login">Sign In</a>
                         <a href="#" class="header_register">Sign Up</a>
+                    </div>
+                </div>
+                <i class=" fa-solid fa-bars l-0 m-0 header_menu-btn"></i>
+            </div>
+
+            <!-- ====nav mobile===== -->
+            <div class="modal-mobile hide">
+                <div class="header_menu-mobile hide">
+                    <ul class="header_list-mobile ">
+                        <li class="header_item-mobile">About</li>
+                        <li class="header_item-mobile">Features</li>
+                        <li class="header_item-mobile">Pricing</li>
+                        <li class="header_item-mobile">Testimonials</li>
+                        <li class="header_item-mobile">Help</li>
+                    </ul>
+                    <div class="header_btn-mobile">
+                        <a href="" class="header_login-mobile">SIGN IN</a>
+                        <a href="" class="header_register-mobile">SIGN UP</a>
                     </div>
                 </div>
             </div>
@@ -452,7 +470,8 @@
                     </div>
                     <div class="form_group">
                         <label for="password" class="form_lable">Password</label>
-                        <input id="password" class="form_control" placeholder="Password" type="password" name="password">
+                        <input id="password" class="form_control" placeholder="Password" type="password"
+                            name="password">
                         <span class="form-message"></span>
                     </div>
                     <div class="form_group">
@@ -464,7 +483,7 @@
                     <span href="" class="form_suggest">Do you have an account ?
                         <a href="">Sign In</a>
                     </span>
-                        <button class="form-submit">Login</button>
+                    <button class="form-submit">Login</button>
                 </form>
             </div>
         </div>
@@ -472,7 +491,7 @@
         <script src="./register.js"></script>
         <script src="./login.js"></script>
         <script src="./main.js"></script>
-   
+
 </body>
 
 </html>
