--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <!-- ====nav mobile===== -->
             <div class="modal-mobile hide">
                 <div class="header_menu-mobile hide">
+                    <i class="fa-solid fa-xmark"></i>
                     <ul class="header_list-mobile ">
                         <li class="header_item-mobile">About</li>
                         <li class="header_item-mobile">Features</li>
